--- a/ADMFacturar/Views/Inventario/AgregarInventario.cshtml
+++ b/ADMFacturar/Views/Inventario/AgregarInventario.cshtml
@@ -1,4 +1,10 @@
 ﻿@model IngresoMercaderia
+
+@{
+    var articulos = ViewData["Articulos"] as List<ArticuloViewModel>;
+}
+
+
 <link href="~/css/custom.css" rel="stylesheet" />
 
 
@@ -10,7 +16,7 @@
             <div class="sm:col-span-2">
                 <label for="PK_FK_Documento" class="block text-sm font-medium">Número de Documento</label>
                 <div class="mt-2">
-                    <input asp-for="PK_FK_Documento" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 17px;">
+                    <input asp-for="PK_FK_Documento" id="PK_FK_Documento" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 17px;">
                 </div>
             </div>
 
@@ -64,20 +70,20 @@
             <div class="sm:col-span-2">
                 <label for="PK_FK_Articulo" class="block text-sm font-medium leading-6 text-white">Código Artículo</label>
                 <div class="mt-2 flex items-center space-x-2">
-                    <input asp-for="PK_FK_Articulo" type="text" class="flex-grow rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 17px;">
+                    <input asp-for="PK_FK_Articulo" value="" type="text" class="flex-grow rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 17px;">
                     <a asp-action="Crea" class="btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-1.5 px-4 rounded">Buscar Artículo</a>
                 </div>
             </div>
             <div class="sm:col-span-2">
                 <label for="Cantidad" class="block text-sm font-medium leading-6 text-white">Cantidad</label>
                 <div class="mt-2">
-                    <input asp-for="Cantidad" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 17px;">
+                    <input asp-for="Cantidad" value="" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 17px;">
                 </div>
             </div>
             <div class="sm:col-span-2">
                 <label for="Costo" class="block text-sm font-medium leading-6 text-white">Costo</label>
                 <div class="mt-2">
-                    <input asp-for="Costo" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 17px;">
+                    <input asp-for="Costo" value="" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 17px;">
                 </div>
             </div>
         </div>
@@ -101,7 +107,8 @@
         <table class="min-w-full leading-normal">
             <thead>
                 <tr class="bg-gray-800 text-white">
-                    <th class="text-center py-3">Artículo</th>
+                    <th class="text-center py-3">Código</th>
+                    <th class="text-center py-3">Nombre</th>
                     <th class="text-center py-3">Cantidad</th>
                     <th class="text-center py-3">Costo</th>
                     <th class="text-center py-3">Total</th>
@@ -109,24 +116,32 @@
                 </tr>
             </thead>
             <tbody class="text-gray-700">
-                <tr class="border-b border-gray-200 hover:bg-gray-100">
-                    <td class="py-3 text-center">Artículo A</td>
-                    <td class="py-3 text-center">10</td>
-                    <td class="py-3 text-center">$50</td>
-                    <td class="py-3 text-center">$500</td>
-                    <td class="py-3 text-center">
-                        <div class="flex justify-center space-x-2">
-                            <a asp-action="AgregarInventario" class="text-blue-600 hover:text-blue-900" title="Editar">
-                                <i class="fas fa-edit"></i>
-                            </a>
-                            <form method="post" asp-action="AgregarInventario" onsubmit="return confirm('¿Está seguro que desea desactivar este cliente?');">
-                                <button type="submit" class="text-red-600 hover:text-red-900 bg-transparent border-none p-0" title="Desactivar">
-                                    <i class="fas fa-trash"></i>
-                                </button>
-                            </form>
+                @if (articulos != null)
+                {
+                    @foreach (var articulo in articulos)
+                    {
+                        <tr class="border-b border-gray-200 hover:bg-gray-100">
+                            <td class="py-3 text-center">@articulo.PK_Articulo</td>
+                            <td class="py-3 text-center">@articulo.Descripcion</td>
+                            <td class="py-3 text-center">@articulo.Cantidad</td>
+                            <td class="py-3 text-center">@articulo.Costo</td>
+                            <td class="py-3 text-center">@articulo.Precio</td>
+                            <td class="py-3 text-center">
+                                <div class="flex justify-center space-x-2">
+                                    <a asp-action="AgregarInventario" class="text-blue-600 hover:text-blue-900" title="Editar">
+                                        <i class="fas fa-edit"></i>
+                                    </a>
+                                    <form method="post" asp-action="AgregarInventario" onsubmit="return confirm('¿Está seguro que desea desactivar este cliente?');">
+                                        <button type="submit" class="text-red-600 hover:text-red-900 bg-transparent border-none p-0" title="Desactivar">
+                                            <i class="fas fa-trash"></i>
+                                        </button>
+                                    </form>
 
-                        </div>
-                    </td>
+                                </div>
+                            </td>
+                        </tr>
+                    }
+                }
             </tbody>
         </table>
     </div>
