--- a/ADMFacturar/Views/Seguridad/Index.cshtml
+++ b/ADMFacturar/Views/Seguridad/Index.cshtml
@@ -37,12 +37,6 @@
                     <input type="text" id="usuario" name="usuario" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
                 </div>
             </div>
-            <div class="sm:col-span-1">
-                <label for="usuario" class="block text-sm font-medium">Correo</label>
-                <div class="mt-1">
-                    <input type="text" id="usuario" name="usuario" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                </div>
-            </div>
         </div>
     </div>
 </form>
@@ -52,7 +46,7 @@
     <div class="flex justify-between items-center bg-gray-800 text-white p-4 rounded-t-lg">
         <h3 class="text-xl font-semibold"><i class="fas fa-list mr-3"></i> Listado de Seguridad</h3>
         <div>
-            <a asp-action="CrearSeguridad" class="btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">Crear Seguridad</a>
+            <a asp-action="CrearSeguridad" class="btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">Crear Usuario</a>
         </div>
     </div>
 
