--- a/ADMFacturar/Views/Shared/_Layout.cshtml
+++ b/ADMFacturar/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout</title>
     <partial name="Head">
+    @RenderSection("Scripts", required: false)
 </head>
 <body class="bg-body font-family-karla flex" style="margin: 0;">
     <partial name="Aside">
