--- a/ADMFacturar/Views/Seguridad/Login.cshtml
+++ b/ADMFacturar/Views/Seguridad/Login.cshtml
@@ -1,4 +1,6 @@
-﻿<link href="~/css/custom.css" rel="stylesheet" />
+﻿@model ADM.Models.LoginRequest
+
+<link href="~/css/custom.css" rel="stylesheet" />
 
 <div class="w-full">
 </div>
@@ -11,32 +13,39 @@
         </h2>
     </div>
 
-
-    <!-- Formulario -->
+    <!-- Formulario de Login -->
     <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-        <form class="space-y-6" action="#" method="POST">
+        <form asp-controller="Seguridad" asp-action="Login" method="post" class="space-y-6">
             <div>
-                <label for="city" class="block text-lg font-medium leading-7 text-white">Usuario</label>
+                <label asp-for="Usuario" class="block text-lg font-medium leading-7 text-white"></label>
                 <div class="mt-2">
-                    <input type="text" class="block w-full rounded-lg border-0 py-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-lg sm:leading-7" style="padding-left: 15px;">
+                    <input asp-for="Usuario" class="block w-full rounded-lg border-0 py-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-lg sm:leading-7" style="padding-left: 15px;">
                 </div>
             </div>
 
             <div>
                 <div class="flex items-center justify-between">
-                    <label for="city" class="block text-lg font-medium leading-7 text-white">Contraseña</label>
+                    <label asp-for="Contra" class="block text-lg font-medium leading-7 text-white"></label>
                 </div>
                 <div class="mt-2">
-                    <input type="password" class="block w-full rounded-lg border-0 py-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-lg sm:leading-7" style="padding-left: 15px;">
+                    <input asp-for="Contra" type="password" class="block w-full rounded-lg border-0 py-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-lg sm:leading-7" style="padding-left: 15px;">
                 </div>
             </div>
 
             <div>
-                 <button asp-controller="Home" asp-action="Index" type="submit" class="flex w-full justify-center rounded-lg bg-blue-500 px-4 py-2 text-lg font-semibold leading-7 text-white shadow-sm hover:bg-blue-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Ingresar</button>
+                <button type="submit" class="flex w-full justify-center rounded-lg bg-blue-500 px-4 py-2 text-lg font-semibold leading-7 text-white shadow-sm hover:bg-blue-600 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Ingresar</button>
             </div>
+
+            <!-- Mensaje de Error -->
+            <div asp-validation-summary="All" class="text-red-500"></div>
         </form>
     </div>
-
     <!-- Fin Formulario -->
 
 </div>
+
+@section Scripts {
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+}
