Creacion Salida de Mercaderia

--- a/ADMFacturar/Views/Inventario/Index.cshtml
+++ b/ADMFacturar/Views/Inventario/Index.cshtml
@@ -62,7 +62,7 @@
     </div> *@
 <div class="w-full mt-8">
     <div class="flex justify-between items-center bg-gray-800 text-white p-4 rounded-t-lg">
-        <h3 class="text-xl font-semibold"><i class="fas fa-list mr-3"></i> Listado de Ingresos</h3>
+        <h3 class="text-xl font-semibold"><i class="fas fa-list mr-3"></i> Listado Ingresos de Inventario</h3>
         <div>
             <a href="/Inventario/AgregarInventario" class="btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">Crear Ingreso de Mercadería</a>
         </div>
