--- a/ADMFacturar/Views/Shared/PageOptions.cshtml
+++ b/ADMFacturar/Views/Shared/PageOptions.cshtml
@@ -26,7 +26,7 @@ Page Options
     Cuentas por Pagar
 </a>
 
-<a asp-controller="Inventario" asp-action="Index" 
+<a asp-controller="Inventario" asp-action="IndexGeneral" 
    class="flex items-center text-white py-4 pl-6 nav-item">
     <i class="fa-solid fa-boxes-stacked mr-3"></i>
     Inventario
