Creacion de Consulta de Inventario

--- a/ADMFacturar/Views/Inventario/IndexGeneral.cshtml
+++ b/ADMFacturar/Views/Inventario/IndexGeneral.cshtml
@@ -22,11 +22,11 @@
                 </div>
             </a>
 
-            <a asp-action="ConsultaExistencias" asp-controller="Inventario" class="transform hover:scale-105 transition duration-500">
+            <a asp-action="IndexExistencias" asp-controller="Inventario" class="transform hover:scale-105 transition duration-500">
                 <div class="bg-white rounded-lg shadow-lg p-6 text-center hover:shadow-xl">
                     <i class="fa-solid fa-clipboard-list text-5xl text-indigo-500 mb-4"></i>
                     <h3 class="text-lg font-semibold text-gray-800">Consulta de Inventario</h3>
-                    <p class="text-gray-600">Consulta de Existencias Articulos</p>
+                    <p class="text-gray-600">Consulta de Existencias de Artículos</p>
                 </div>
             </a>
 
